--- a/index.html
+++ b/index.html
@@ -494,12 +494,12 @@
         <section id="contact" class="section-page ">
             <div class="row row-cols-1 row-cols-sm-2">
 
-                <div class="col"> <img class="w-75" src="/img/Anyas/faceinframe.png" />
-                    <div class="card" style="width: 18rem;">
+                <div class="col d-flex flex-column align-items-center"> <img class="w-75" src="/img/Anyas/faceinframe.png" />
+                    <div class="card" >
                         <div class="card-body overflow-auto">
                           <h5 class="card-title">About</h5>
                           <h6 class="card-subtitle mb-2 text-body-secondary">Ice Breakers</h6>
-                          <p class="card-text">Hi, I'm Anya. I'm located in Alpharetta, Georgia. My favorite food is Maryland crab soup, since I grew
+                          <p class="card-text" style="max-height: 10rem; overflow-y: auto; ">Hi, I'm Anya. I'm located in Alpharetta, Georgia. My favorite food is Maryland crab soup, since I grew
                             up around Baltimore. I like crafts, and I love outdoor breweries. My favorite animal is a
                             turtle, after dogs of course. Have any good icebreakers? Let me know by filling out this
                             form, or click on the envelope, bottom right.</p>
