--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 <p>
                                     I use JavaScript to bring websites to life, and make them fully interactive. Check
                                     out my
-                                    <a href="#jsProjects">JavaScript</a> section to learn more.
+                                    <a href="#jsProjects">JavaScript</a> section to learn More.
                                 </p>
 
                             </div>
@@ -500,7 +500,7 @@
                           <h5 class="card-title">About</h5>
                           <h6 class="card-subtitle mb-2 text-body-secondary">Ice Breakers</h6>
                           <p class="card-text" style="max-height: 10rem; overflow-y: auto;">Hi, I'm Anya. I'm located in Alpharetta, Georgia. My favorite food is Maryland crab soup, since I grew
-                            up around Baltimore. I like crafts, and I love outdoor breweries. My favorite animal is a
+                            up around BaltiMore. I like crafts, and I love outdoor breweries. My favorite animal is a
                             turtle, after dogs of course. Have any good icebreakers? Let me know by filling out this
                             form, or click on the envelope, bottom right.</p>
                           
@@ -909,7 +909,7 @@
                         <h3 class="card-title" data-blog="title"></h3>
                         <p class="card-text line-clamp" data-blog="content"></p>
                         <div>
-                            <a href="#" class="btn btn-primary" data-blog="readMoreLink">Read more</a>
+                            <a href="#" class="btn btn-primary" data-blog="readMoreLink">Read More</a>
                         </div>
                         <p class="card-text">
                             <small class="text-muted"></small>
