almost done. needs desc for projects +bugtracker

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="col-6">
                         <div class="hoverIcon">
-                            <a href="/img/Anyas/AnnaBalan.png" target="_blank"><img src="/img/Anyas/folderpixel.png"
+                            <a href="/img/abalanresume92123.png" target="_blank"><img src="/img/Anyas/folderpixel.png"
                                     class="dynamicFileImg" />
                                 <div class="hoverText">Resume</div> <!-- Added this line -->
                             </a>
@@ -169,7 +169,7 @@
                             <div class="icon-card-body">
                                 <!-- content of card -->
                                 <p>
-                                    I use C#, as well as industry-standard design patterns, like MVC to create dynamic
+                                    I use C#, as well as industry-standard design patterns like MVC, to create dynamic
                                     applications. View my main <a href="#projects">projects</a> section
                                     to see examples.
                                 </p>
@@ -288,7 +288,7 @@
         <section id="projects" class="section-page">
             <div class="container">
                 <h2>C# MVC Projects <img src="/img/Anyas/catgenie.png" height="65" /></h2>
-                <p class="my-3">Showcasing complete functional projects built with MVC Entity Framework, managed on
+                <p class="my-3">Showcasing complete, functional projects built with MVC Entity Framework, managed on
                     PostrgreSQL; applied front end, back end, security, and
                     database development. All of these projects are full-stack web applications that are published on
                     Railway, so
@@ -369,14 +369,14 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="img/Anyas/palindrome.png" />
-                                    <img src="/img/Anyas/palindrome.png" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/movielist.png" />
+                                    <img src="/img/Anyas/movielist.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        Check input text to see if it's a palindrome.
+                                        An API integration with TMDB, showing the top 20 movies at any given time.
                                     </p>
-                                    <a type="button" href="https://palindrome-abalan.netlify.app"
+                                    <a type="button" href="https://movielist-abalan.netlify.app"
                                         class="btn btn-primary">Learn More</a>
                                 </div>
                             </div>
@@ -423,14 +423,14 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/Anyas/reverse.png" />
-                                    <img src="/img/Anyas/reverse.png" />
+                                    <source media="(min-width: 992px)" srcset="img/Anyas/palindrome.png" />
+                                    <img src="/img/Anyas/palindrome.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        This app takes in a string and reverses it.
+                                        Check input text to see if it's a palindrome.
                                     </p>
-                                    <a type="button" href="https://reverse-abalan.netlify.app"
+                                    <a type="button" href="https://palindrome-abalan.netlify.app"
                                         class="btn btn-primary">Learn More</a>
                                 </div>
                             </div>
@@ -446,8 +446,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        Two imput values make a set of numbers into a pattern, following the fizzbuzz
-                                        propmt.
+                                        Following the Fizzbuzz prompt, we find multiples of two input values.
                                     </p>
                                     <a type="button" href="https://fizzbuzz-abalan.netlify.app"
                                         class="btn btn-primary">Learn More</a>
@@ -460,20 +459,21 @@
                         <div class="hc-wrapper">
                             <div class="hc-card">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="/img/Anyas/movielist.png" />
-                                    <img src="/img/Anyas/movielist.png" />
+                                    <source media="(min-width: 992px)" srcset="/img/Anyas/reverse.png" />
+                                    <img src="/img/Anyas/reverse.png" />
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        An API integration with TMDB. Showing the top 20 movies at any given time.
+                                        This app takes in a string and reverses it.
                                     </p>
-                                    <a type="button" href="https://movielist-abalan.netlify.app"
+                                    <a type="button" href="https://reverse-abalan.netlify.app"
                                         class="btn btn-primary">Learn More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
+                    <br />
                 </div>
 
             </div>
@@ -482,7 +482,7 @@
 
 
         <!-- blog -->
-        <section id="blogs" class="section-page">
+        <section id="blogs" class="section-page px-3">
             <div class="container">
                 <h2 class="mb-5 text-center">
                     The Blog <img src="/img/Anyas/catblogger.png" height="65" />
@@ -491,10 +491,11 @@
             </div>
         </section>
         <!-- contact section -->
-        <section id="contact" class="section-page ">
+        <section id="contact" class="section-page">
+            
             <div class="row row-cols-1 row-cols-sm-2">
 
-                <div class="col d-flex flex-column align-items-center"> <img class="w-75" src="/img/Anyas/faceinframe.png" />
+                <div class="col d-flex flex-column align-items-center px-4"> <img class="w-75" src="/img/Anyas/faceinframe.png" />
                     <div class="card" >
                         <div class="card-body overflow-auto">
                           <h5 class="card-title">About</h5>
@@ -509,7 +510,7 @@
                 </div>
 
                 <div class="col">
-                    <h2 class="ms-3">Contact Me <img src="/img/Anyas/pigeontoast.png" height="65" /></h2>
+                    <h2 class="ms-3 mt-5">Contact Me <img src="/img/Anyas/pigeontoast.png" height="65" /></h2>
                     <div class=" card card-body text-dark" id="contact-card">
                         <form name="PortfolioContact" method="post" netlify>
                             <div class="row row-cols-1 mt-2">
