--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="row row-cols-1 g-3 py-1">
 
                 <div class="col col-6 text-start pt-1">
-                    <div><a href=""><img src="/img/Anyas/cutecomputer.png" height="40"> Try the Bug Tracker</a></div>
+                    <div><a href="https://abugtracker-production.up.railway.app/"><img src="/img/Anyas/cutecomputer.png" height="40"> Try the Bug Tracker</a></div>
 
                 </div>
 
@@ -611,20 +611,13 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/img/logos/BugTracker_600.jpg" class="d-block w-100" alt="Logo">
+                                        <img src="/img/Anyas/bugpic1.png" class="d-block w-100" alt="Logo">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen1.jpg" class="d-block w-100"
+                                        <img src="/img/Anyas/bugpic2.png" class="d-block w-100"
                                             alt="Screenshot 2">
                                     </div>
-                                    <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen2.jpg" class="d-block w-100"
-                                            alt="Screenshot 2">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen3.jpg" class="d-block w-100"
-                                            alt="Screenshot 3">
-                                    </div>
+                                   
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#bugTrackerCarousel"
                                     data-bs-slide="prev">
@@ -642,7 +635,7 @@
                         <div class="col-12 col-lg-7">
                             <!-- About the Project -->
                             <h3>Bug Tracker</h3>
-                            <p>BugBox is a software defect tracking system. Commonly known as a bug
+                            <!-- <p>BugBox is a software defect tracking system. Commonly known as a bug
                                 tracker. Insectcide is built with ASP.NET, MVC, C# and SQL. A role based
                                 security system was implemented to create permission based roles. The roles of
                                 Admin , Project Manager, Developer and Submitter restrict what the user can see
@@ -651,7 +644,7 @@
                             <p> The system was built with C# and .Net in 3 weeks. The front end was developed
                                 with HTML, Javascript and Bootstrap. The back-end utlizies MVC and C#. The
                                 database was built with SQL Server and hosted on Azure. Please visit the site
-                                and try it out.</p>
+                                and try it out.</p> -->
 
                             <ul class="list-group">
                                 <li class="list-group-item">
@@ -684,7 +677,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <a href="abugtracker-production.up.railway.app" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
