--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="row row-cols-1 g-3 py-1">
 
                 <div class="col col-6 text-start pt-1">
-                    <div><a href="thebugtracker-production-7556.up.railway.app"><img src="/img/Anyas/cutecomputer.png" height="40"> Try the Bug Tracker</a></div>
+                    <div><a href="https://thebugtracker-production-7556.up.railway.app"><img src="/img/Anyas/cutecomputer.png" height="40"> Try the Bug Tracker</a></div>
 
                 </div>
 
@@ -677,7 +677,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="thebugtracker-production-7556.up.railway.app" class="btn btn-primary">Try the App</a>
+                    <a href="https://thebugtracker-production-7556.up.railway.app" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
