--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 
                 <div class="col col-6 text-end">
 
-                    <a class="text-decoration-none" href="https://linkedin.com/in/anna-balan-37674a25a">
+                    <a class="text-decoration-none" href="https://www.linkedin.com/in/anya-balan-37674a25a/">
                         <i class="bi bi-linkedin p-2 socialIcons"></i>
                     </a>
                     <a class="text-decoration-none" href="https://github.com/A-Balan/Portfolio">
