--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="intheweedsblog-production.up.railway.app" class="btn btn-primary">Try the App</a>
+                    <a href="https://intheweedsblog-production.up.railway.app" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
