--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
                 <div class="col col-6 text-end">
 
-                    <a class="text-decoration-none" href="https://www.linkedin.com/in/anya-balan-37674a25a/">
+                    <a class="text-decoration-none" href="https://www.linkedin.com/in/anya-balan-37674a25a">
                         <i class="bi bi-linkedin p-2 socialIcons"></i>
                     </a>
                     <a class="text-decoration-none" href="https://github.com/A-Balan/Portfolio">
@@ -635,16 +635,11 @@
                         <div class="col-12 col-lg-7">
                             <!-- About the Project -->
                             <h3>Bug Tracker</h3>
-                            <!-- <p>BugBox is a software defect tracking system. Commonly known as a bug
-                                tracker. Insectcide is built with ASP.NET, MVC, C# and SQL. A role based
-                                security system was implemented to create permission based roles. The roles of
-                                Admin , Project Manager, Developer and Submitter restrict what the user can see
-                                and do. The software allows for users to submit tickets and those tickets are
-                                tracked through status from Open to Complete.</p>
-                            <p> The system was built with C# and .Net in 3 weeks. The front end was developed
-                                with HTML, Javascript and Bootstrap. The back-end utlizies MVC and C#. The
-                                database was built with SQL Server and hosted on Azure. Please visit the site
-                                and try it out.</p> -->
+                        
+                                <p>BugTrax is used to log defects in a project and assign team members to tasks, via creating tickets.
+                                    I built this app with ASP.NET, MVC, C# and PostreSQL; hosted on Railway. I implemented a role-based security system. Each role:
+                                    Admin, Program Manager, Developer and Submitter, has different permissions. 
+                                </p>
 
                             <ul class="list-group">
                                 <li class="list-group-item">
@@ -735,16 +730,10 @@
                         <div class="col-12 col-lg-7">
                             <!-- About the Project -->
                             <h3>Contact Keeper</h3>
-                            <!-- <p>The Address Book is a software defect tracking system. Commonly known as a bug
-                                tracker. Insectcide is built with ASP.NET, MVC, C# and SQL. A role based
-                                security system was implemented to create permission based roles. The roles of
-                                Admin , Project Manager, Developer and Submitter restrict what the user can see
-                                and do. The software allows for users to submit tickets and those tickets are
-                                tracked through status from Open to Complete.</p>
-                            <p> The system was built with C# and .Net in 3 weeks. The front end was developed
-                                with HTML, Javascript and Bootstrap. The back-end utlizies MVC and C#. The
-                                database was built with SQL Server and hosted on Azure. Please visit the site
-                                and try it out.</p> -->
+                                <p>Contact Keeper is a responsive address book. It is a multi-tenent app, which requires authorization to view
+                                    the data associated with any particular account. It also uses an email service. Contacts can be organized into categories
+                                    and emailed from the app.
+                                </p>
 
                             <ul class="list-group">
                                 <li class="list-group-item">
@@ -836,16 +825,10 @@
                         <div class="col-12 col-lg-7">
                             <!-- About the Project -->
                             <h3>In the Weeds Blog</h3>
-                            <!-- <p>BugBox is a software defect tracking system. Commonly known as a bug
-                                tracker. Insectcide is built with ASP.NET, MVC, C# and SQL. A role based
-                                security system was implemented to create permission based roles. The roles of
-                                Admin , Project Manager, Developer and Submitter restrict what the user can see
-                                and do. The software allows for users to submit tickets and those tickets are
-                                tracked through status from Open to Complete.</p>
-                            <p> The system was built with C# and .Net in 3 weeks. The front end was developed -->
-                            <!-- with HTML, Javascript and Bootstrap. The back-end utlizies MVC and C#. The
-                                database was built with SQL Server and hosted on Azure. Please visit the site
-                                and try it out.</p> -->
+                            <p>A scalable blog site with role based security. The Admin has permission to create and edit posts,
+                                as well as use swagger API to link posts to other sites. A Moderator is allowed to moderate comments,
+                                and users are allowed to comment only if logged in.
+                            </p>
 
                             <ul class="list-group">
                                 <li class="list-group-item">
@@ -878,7 +861,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="https://intheweedsblog-production.up.railway.app" class="btn btn-primary">Try the App</a>
+                    <a href="intheweedsblog-production.up.railway.app" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
