changed urls to heroku

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <div class="row row-cols-1 g-3 py-1">
 
                 <div class="col col-6 text-start pt-1">
-                    <div><a href="https://thebugtracker-production-7556.up.railway.app"><img src="/img/Anyas/cutecomputer.png" height="40"> <strong>Bug Tracker</strong></a></div>
+                    <div><a href="https://bugtrackeranya-e60fd6043557.herokuapp.com/"><img src="/img/Anyas/cutecomputer.png" height="40"> <strong>Bug Tracker</strong></a></div>
 
                 </div>
 
@@ -587,7 +587,7 @@
                             <h3>Bug Tracker</h3>
                         
                                 <p>BugTrax is used to log defects in a project and assign team members to tasks, via creating tickets.
-                                    I built this app with ASP.NET, MVC, C# and PostreSQL; hosted on Railway. I implemented a role-based security system. Each role:
+                                    I built this app with ASP.NET, MVC, C# and PostreSQL; hosted on Heroku. I implemented a role-based security system. Each role:
                                     Admin, Program Manager, Developer and Submitter, has different permissions. 
                                 </p>
 
@@ -622,7 +622,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="https://thebugtracker-production-7556.up.railway.app" class="btn btn-primary">Try the App</a>
+                    <a href="https://bugtrackeranya-e60fd6043557.herokuapp.com/" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
@@ -716,7 +716,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="https://contactkeeper.up.railway.app/" class="btn btn-primary">Try the App</a>
+                    <a href="https://addresskeeper-aa47fb22480f.herokuapp.com/" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
@@ -811,7 +811,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="https://intheweedsblog-production.up.railway.app" class="btn btn-primary">Try the App</a>
+                    <a href="https://intheweedsblog-252371061713.herokuapp.com/" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
@@ -865,18 +865,10 @@
 
     <script>
         function copyToClipboard() {
-            // Copy the text inside the text field
             navigator.clipboard.writeText("abalan0326@gmail.com");
         }
 
         function showClipboardMessage() {
-            // Swal.fire({
-            //     text: "abalan0326@gmail.com",
-            //     confirmButtonText: "Copy"
-            // }).then(function (result) {
-            //     copyToClipboard();
-            // });
-
             Swal.fire({
                 html: '<br />abalan0326@gmail.com ',
                 showCloseButton: true,
