--- a/index.html
+++ b/index.html
@@ -616,8 +616,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="https://bugtrackeranya-e60fd6043557.herokuapp.com/" class="btn btn-primary">Try the App</a>
+                    <button type="button" class="btn btn-secondary try-btn" data-bs-dismiss="modal">Close</button>
+                    <a href="https://bugtrackeranya-e60fd6043557.herokuapp.com/" class="btn">Try the App</a>
                 </div>
             </div>
         </div>
@@ -711,7 +711,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="https://addresskeeper-aa47fb22480f.herokuapp.com/" class="btn btn-primary">Try the App</a>
+                    <a href="https://addresskeeper-aa47fb22480f.herokuapp.com/" class="btn">Try the App</a>
                 </div>
             </div>
         </div>
@@ -806,7 +806,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="https://intheweedsblog-252371061713.herokuapp.com/" class="btn btn-primary">Try the App</a>
+                    <a href="https://intheweedsblog-252371061713.herokuapp.com/" class="btn">Try the App</a>
                 </div>
             </div>
         </div>
